[project]
name = "configbuddy"
version = "0.1.0"
description = "A lightweight tool for managing configuration files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Harim Kang", email = "harimkang4422@gmail.com" }
]
keywords = ["configuration", "yaml", "json", "ini", "diff", "merge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0.0",
    "jsonschema>=4.17.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
cli = [
    "jsonargparse>=4.17.0",
]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/harimkang/configbuddy"
Repository = "https://github.com/harimkang/configbuddy.git"
Issues = "https://github.com/harimkang/configbuddy/issues"

[project.scripts]
configbuddy = "configbuddy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["configbuddy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=configbuddy"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["configbuddy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
